--- a/demo-app/index.html
+++ b/demo-app/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-    <title>Angular QuickStart</title>
+    <title>Ng2 MDF Validation Message - Demo App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/bootstrap.theme.css">
